Blog do projeto de extensão feito Co-authored-by: Antônio Neves <Neeveszr@users.noreply.github.com>

--- a/contato.html
+++ b/contato.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/clt.css">
+    <link rel="stylesheet" href="CSS/contato.css">
     <title>Inclusão de Pessoas com Autismo no Mercado de Trabalho</title>
 </head>
 <body>
@@ -21,9 +21,7 @@
     </div>
 <div class="container">
     <header>
-            <h1>Inclusão de Pessoas com Autismo no Mercado de Trabalho</h1>
-        <img src="img/CLT-TEA.jpeg" alt="Descrição da imagem">
-        <p>Por Blog do Inclusão - Data de Hoje</p>
+            <h1>CONTATO</h1>
     </header>
 
     <main>
