--- a/adap.html
+++ b/adap.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/clt.css">
-    <title>Inclusão de Pessoas com Autismo no Mercado de Trabalho</title>
+    <title>Adaptações no Ambiente de Trabalho: Facilitando a Inclusão de Pessoas com Autismo</title>
 </head>
 <body>
     <div class="container1">
