Feito pagina de adap

--- a/adap.html
+++ b/adap.html
@@ -22,16 +22,53 @@
 <div class="container">
     <header>
             <h1>Inclusão de Pessoas com Autismo no Mercado de Trabalho</h1>
-        <img src="img/CLT-TEA.jpeg" alt="Descrição da imagem">
+        <img src="img/img-2.jpg" alt="Descrição da imagem">
         <p>Por Blog do Inclusão - Data de Hoje</p>
     </header>
 
     <main>
         <article>
-            <p>A inclusão de pessoas com Transtorno do Espectro do Autismo (TEA) no mercado de trabalho é um tema de grande relevância e impacto social. No Brasil, a Lei 8.213/91, conhecida como Lei de Benefícios da Previdência Social, desempenha um papel fundamental nesse processo, especialmente através do seu Artigo 93.</p>
-            <p>Este artigo da lei estabelece que empresas com 100 ou mais empregados devem preencher de 2% a 5% dos seus cargos com beneficiários reabilitados ou pessoas com deficiência, incluindo aquelas com autismo. Essa medida visa promover um ambiente de trabalho mais inclusivo e proporcionar oportunidades iguais para todos.</p>
-            <p>Além de cumprir com a legislação, as empresas que investem na inclusão de pessoas com TEA colhem benefícios significativos, como o desenvolvimento de um ambiente mais diversificado e criativo, melhor integração social e contribuição para uma sociedade mais justa e igualitária.</p>
-            <p>A Lei 8.213/91 não apenas obriga as empresas a cumprir cotas de contratação, mas também incentiva práticas que valorizam a diversidade e promovem a inclusão no ambiente de trabalho. Ao adotar essas medidas, as empresas não só estão seguindo a lei, mas também estão construindo uma cultura organizacional mais empática e inclusiva.</p>
+            <h1>Adaptações no Ambiente de Trabalho: Facilitando a Inclusão de Pessoas com Autismo</h1>
+            
+            <p>A inclusão de pessoas com Transtorno do Espectro do Autismo (TEA) no mercado de trabalho é uma questão de justiça e igualdade. 
+            Para que essa inclusão seja eficaz, é crucial que o ambiente de trabalho seja adaptado para atender às necessidades específicas dessas pessoas. 
+            Adaptações físicas, tecnológicas e organizacionais são essenciais para criar um ambiente onde todos possam prosperar.</p>
+
+            <h1>Por quê Adaptações são Importantes?</h1>
+
+            <p>Pessoas com autismo podem enfrentar desafios únicos no ambiente de trabalho, como sensibilidade a estímulos sensoriais,
+            dificuldades de comunicação e necessidade de rotinas estruturadas. 
+            Ao realizar adaptações no local de trabalho, 
+            as empresas podem facilitar a integração e o desempenho dessas pessoas, promovendo um ambiente inclusivo e acolhedor.</p>
+
+            <h1>Tipos de Adaptações no Ambiente de Trabalho</h1>
+            
+            <ol>
+                <li><b>Adaptações Físicas:</b> Vai criar áreas silenciosas onde os funcionários possam trabalhar sem distrações sensoriais.
+                Usar iluminação que possa ser ajustada para evitar desconforto sensorial.</li>
+                <li><b>Adaptações Tecnológias:</b> Implementar ferramentas que facilitem a comunicação, como aplicativos de mensagens instântaneas ou programas de vídeo-chamada. 
+                Utilizar dispositivos que ajudem na execução de tarefas, como lembretes digitais e organizadores visuais.</li>
+                <li><b>Adaptações organizacionaisÇ</b> Estabelecer rotinhas claras e previsíveis para ajudar na organização do dia a dia. 
+                Oferecer treinamentos aos gestores e colegas para melhor compreender as necessidades e potencialidade das pessoas com autismo.</li>
+            </ol>
+
+            <h1>Exemplos de Sucesso</h1>
+
+            <p>Empresas que adotaram essas adaptações relataram um aumento significativo na satisfação e produtividade dos funcionários com autismo. 
+            Depoimentos indicam que ambientes de trabalho adaptados não só beneficiam as pessoas com TEA, 
+            mas também melhoram a dinâmica e a harmonia geral da equipe.</p>
+
+            <h1>Benefícios para Todos</h1>
+            <p>• <b>Melhoria na Produtividade:<b> Adaptações adequadas permitem que os funcionários com autismo desempenhem suas funções de maneiras mais eficientes.</p>
+            <p>• <b>Aumento da Diversidade:</b> Ambientes inclusivos atraem talentos diversificados, enriquecendo a cultura organizacional.</p>
+            <p>• <b>Clima Organizacional Positivo: </b> Ações inclusivas promovem um sentimento de pertencimento e respeito entre todos os colaboradores.</p>
+
+            <h1>Conclusão</h1>
+
+            <p>Adaptar o ambiente de trabalho para incluir pessoas com autismo é uma prática essencial para promover a verdadeira inclusão. 
+            Essas adaptações demonstram o compromisso das empresas com a diversidade e a igualdade de oportunidades.
+            Ao criar um ambiente de trabalho acessível e acolhedor, todos saem ganhando,
+            e a sociedade avança em direção a uma convivência mais justa e harmoniosa.</p>
         </article>
     </main>
 </div>
