--- a/contato.html
+++ b/contato.html
@@ -1,24 +1,38 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/contato.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="CSS/contato.css" />
     <title>Inclusão de Pessoas com Autismo no Mercado de Trabalho</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="container1">
-        <nav id="navbar">
-            <div id="navbar-inner">
-              <h2>Blog TEA</h2>
-              <ul id="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="contato.html">Contato</a></li>
-              </ul>
-            </div>
-          </nav>
-          <div>
+      <nav id="navbar">
+        <div id="navbar-inner">
+          <h2>Blog TEA</h2>
+          <ul id="nav-links">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="contato.html">Contato</a></li>
+          </ul>
+        </div>
+      </nav>
+      <div> </div>
+      <header>
+        <div class="h1-container">
+        <h1>Contato</h1>
     </div>
-    
-</body>
+      </header>
+      <div class="about-container">
+        <h3>Entre em contato com a Inclusão em Foco!</h3>
+        <p>Você pode entrar em contato conosco através do email:</p>
+        <ul id="container-email">
+          <li class="email">antonio-neves.neto@somosicev.com</li>
+          <li class="email">guilherme.pereira@somosicev.com</li>
+          <li class="email">heitor.macedo@somosicev.com</li>
+          <li class="email">wickham.pereira@somosicev.com</li>
+        </ul>
+      </div>
+    </div>
+  </body>
 </html>
