--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
     />
-    <title>BlogTEA</title>
+    <title>Inclusão em Foco</title>
     <script src="JS/script.js" defer></script>
   </head>
   <body>
