--- a/adap.html
+++ b/adap.html
@@ -59,7 +59,7 @@
             mas também melhoram a dinâmica e a harmonia geral da equipe.</p>
 
             <h1>Benefícios para Todos</h1>
-            <p>• <b>Melhoria na Produtividade:<b> Adaptações adequadas permitem que os funcionários com autismo desempenhem suas funções de maneiras mais eficientes.</p>
+            <p>• <b>Melhoria na Produtividade:</b> Adaptações adequadas permitem que os funcionários com autismo desempenhem suas funções de maneiras mais eficientes.</p>
             <p>• <b>Aumento da Diversidade:</b> Ambientes inclusivos atraem talentos diversificados, enriquecendo a cultura organizacional.</p>
             <p>• <b>Clima Organizacional Positivo: </b> Ações inclusivas promovem um sentimento de pertencimento e respeito entre todos os colaboradores.</p>
 
