--- a/contato.html
+++ b/contato.html
@@ -8,15 +8,6 @@
   </head>
   <body>
     <div class="container1">
-      <nav id="navbar">
-        <div id="navbar-inner">
-          <h2>Blog TEA</h2>
-          <ul id="nav-links">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="contato.html">Contato</a></li>
-          </ul>
-        </div>
-      </nav>
       <div> </div>
       <header>
         <div class="h1-container">
@@ -24,15 +15,14 @@
     </div>
       </header>
       <div class="about-container">
-        <h3>Entre em contato com a Inclusão em Foco!</h3>
-        <p>Você pode entrar em contato conosco através do email:</p>
-        <ul id="container-email">
-          <li class="email">antonio-neves.neto@somosicev.com</li>
-          <li class="email">guilherme.pereira@somosicev.com</li>
-          <li class="email">heitor.macedo@somosicev.com</li>
-          <li class="email">wickham.pereira@somosicev.com</li>
-        </ul>
-      </div>
-    </div>
-  </body>
+            <h3>Entre em contato com a Ursae!</h3>
+            <p>Você pode entrar em contato conosco através do email:</p>
+            <ul>
+                <li>antonio-neves.neto@somosicev.com</li>
+                <li>guilherme.pereira@somosicev.com</li>
+                <li>heitor.macedo@somosicev.com</li>
+                <li>wickham.pereira@somosicev.com</li>
+            </ul>
+        </div>
+</body>
 </html>
