--- a/contato.html
+++ b/contato.html
@@ -15,7 +15,7 @@
     </div>
       </header>
       <div class="about-container">
-            <h3>Entre em contato com a Ursae!</h3>
+            <h3>Entre em contato com a Inclusão em Foco!</h3>
             <p>Você pode entrar em contato conosco através do email:</p>
             <ul>
                 <li>antonio-neves.neto@somosicev.com</li>
