--- a/clt.html
+++ b/clt.html
@@ -10,7 +10,7 @@
     <div class="container1">
         <nav id="navbar">
             <div id="navbar-inner">
-              <h2>Blog TEA</h2>
+              <h2>Inclusão em Foco</h2>
               <ul id="nav-links">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="contato.html">Contato</a></li>
